re PR libfortran/30918 (Failure to skip commented out NAMELIST)

2007-02-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/30918
	* io/listread.c (namelist_read): Eat comment line.

2007-02-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/30918
	* gfortran.dg/namelist_26.f90: New test.

From-SVN: r122309